# rabbot

./: .bumpversion.cfg  .drone.yml  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: main.yml
rabbot/: __main__.py  __version__.py  cli.py  rabbot.py
rabbot/commands/: cmd_check.py  cmd_version.py
