[tool.poetry]
name = "rabbot"
version = "0.1.0"
description = "A small utility for testing RabbitMQ connections."
authors = ["Derek Sudduth <derek.sudduth@gmail.com>"]
license = "MIT"

readme = "README.md"

keywords = ["tools", "rabbitmq"]
classifiers = [
  "Topic :: Software Development :: Build Tools",
  "Topic :: Software Development :: Libraries :: Python Modules"
]

[tool.poetry.dependencies]
python = "^3.7"
pika = "^1.1"
black = {version = "^18.3-alpha.0", allows-prereleases = true}

[tool.poetry.dev-dependencies]
pytest = "^5.1"
pytest-cov = "^2.7"
pre-commit = "^1.18"

[tool.poetry.scripts]
poetry = "poetry.console:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
