[tool.poetry]
name = "rabbot"
version = "0.3.4"
description = "A small utility for testing RabbitMQ connections."
readme = "README.md"
authors = ["Derek Sudduth <derek.sudduth@gmail.com>"]
repository = "https://github.com/dsudduth/rabbot"
homepage = "https://github.com/dsudduth/rabbot"
license = "MIT"

keywords = ["tools", "rabbitmq"]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Software Development :: Build Tools"
]

[tool.poetry.dependencies]
python = "^3.7"
pika = "^1.1"

[tool.poetry.dev-dependencies]
pytest = "^5.1"
pytest-cov = "^2.7"
pre-commit = "^1.18"
bumpversion = "^0.5.3"
black = {version = "^18.3-alpha.0", allows-prereleases = true}

[tool.poetry.scripts]
rabbot = "rabbot.cli:cli"

[tool.black]
line-length = 79
target_version = ['py37', 'py38']
include = '\.py?$'
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
)
'''

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
